# phalanx

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  cli.py  hermes_constants.py  hermes_logging.py  hermes_state.py  hermes_time.py  pyproject.toml  run_agent.py  utils.py
.github/workflows/: ci.yml
agent/: auxiliary_client.py  context_compressor.py  context_references.py  memory_manager.py  prompt_builder.py  tool_guardrails.py
docs/: ARCHITECTURE.md  MIGRATION_PLAN.md  agent-self-evolution.md  phase-2.0-skeleton.md  phase-2.1-minimal-loop.md  phase-2.2-tools.md  phase-2.3-prompt-context.md  phase-2.4-multi-provider.md  phase-2.5-sessions.md  phase-2.6-repl.md  phase-2.7-web-dashboard.md  phase-2.8a-evaluation.md  phase-2.8b-memory-context.md  phase-2.8c-delegate.md  phase-2.8d-guardrails.md  run-loop-vs-upstream.md
docs/guides/: build-vs-setup-py.md  ci-cd.md
hermes_cli/: __main__.py  banner.py  commands.py  config.py  env_loader.py  eval.py  logs.py  main.py  tips.py  web_server.py
tests/: conftest.py  test_async_auxiliary_client.py  test_audit_log.py  test_checkpoint_manager.py  test_cli_commands.py  test_cli_handlers.py  test_cli_logs.py  test_cli_oneshot.py  test_cli_repl.py  test_cli_resume.py  test_cli_session.py  test_cli_tools.py  test_context_compressor.py  test_context_references.py  test_delegate_critic.py  test_delegate_integration.py  test_delegate_tool.py  test_eval.py  test_eval_ci_smoke.py  test_memory_manager.py  test_minimal_loop.py  test_run_conversation_hooks.py  test_session_db.py  test_session_db_integration.py  test_tool_guardrails.py  test_web_config_env.py  test_web_server.py  test_web_sessions_logs_analytics.py
tests/golden/: delegate_basic_split.yaml  delegate_critic_catches_bug.yaml  delegate_planner_decomposes.yaml  delegate_recursion_capped.yaml  delegate_shared_budget.yaml  example_smoke.yaml  file_patch_create_file.yaml  file_read_pyproject.yaml  file_search_iteration_budget.yaml  multi_read_then_propose.yaml  multi_search_then_read.yaml  plan_explain_closure.yaml  plan_suggest_improvement.yaml  reference_does_not_replace_tools.yaml  reference_file_constants.yaml  reference_file_pyproject.yaml  reference_missing_file.yaml  reference_two_files_compose.yaml  smoke_oneshot.yaml  web_extract_url.yaml  web_search_official.yaml
tools/: __init__.py  checkpoint_manager.py  delegate_tool.py  echo_tool.py  file_state.py  registry.py  terminal_tool.py
web/: index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
web/src/: App.tsx  index.css  main.tsx
web/src/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  input.tsx  select.tsx  toast.tsx
web/src/lib/: api.ts  utils.ts
web/src/pages/: AnalyticsPage.tsx  ConfigPage.tsx  EnvPage.tsx  LogsPage.tsx  SessionsPage.tsx  StatusPage.tsx
