[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "phalanx"
version = "0.0.1"
description = "Phalanx — minimal AI agent ported from hermes-agent (Phase 0 skeleton)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
  # Phase 0 needs only pyyaml (utils.py, hermes_time.py, hermes_logging.py).
  "pyyaml>=6.0.2,<7",
  # Phase 1 will use openai chat completions + fire CLI.
  "openai>=2.21.0,<3",
  "anthropic>=0.39.0,<1",
  "httpx[socks]>=0.28.1,<1",
  "tenacity>=9.1.4,<10",
  "pydantic>=2.12.5,<3",
  "python-dotenv>=1.2.1,<2",
  "jinja2>=3.1.5,<4",
  "rich>=14.3.3,<15",
  "requests>=2.33.0,<3",
  "fire>=0.7.1,<1",
]

[project.optional-dependencies]
dev = ["pytest>=9.0.2,<10", "pytest-asyncio>=1.3.0,<2", "ruff"]

# Entry points — registered when phalanx is `pip install -e .`
# `hermes` and `hermes-agent` names are kept identical to upstream so that
# any docs/scripts referencing them still work.
[project.scripts]
hermes = "hermes_cli.main:main"
hermes-agent = "run_agent:main"

[tool.setuptools]
# Top-level Python modules (single-file, not packages). All names match
# hermes-agent upstream so future cherry-picks land cleanly.
py-modules = [
  "hermes_constants",
  "hermes_logging",
  "hermes_time",
  "utils",
]

[tool.setuptools.packages.find]
include = ["agent", "agent.*", "tools", "tools.*", "hermes_cli", "hermes_cli.*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
