[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "phalanx"
version = "0.0.1"
description = "Phalanx — minimal AI agent ported from hermes-agent (Phase 0 skeleton)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
  # Phase 0 needs only pyyaml (utils.py, hermes_time.py, hermes_logging.py).
  "pyyaml>=6.0.2,<7",
  # Phase 1 will use openai chat completions + fire CLI.
  "openai>=2.21.0,<3",
  "anthropic>=0.39.0,<1",
  "httpx[socks]>=0.28.1,<1",
  "tenacity>=9.1.4,<10",
  "pydantic>=2.12.5,<3",
  "python-dotenv>=1.2.1,<2",
  "jinja2>=3.1.5,<4",
  "rich>=14.3.3,<15",
  "requests>=2.33.0,<3",
  "fire>=0.7.1,<1",
  # Used by `hermes tools dry-run` to validate --args against tool schemas
  # without invoking the handler.
  "jsonschema>=4.20,<5",
  # Phase 2.6 wave 1 — interactive REPL.  prompt_toolkit is the
  # foundation for FileHistory, AutoSuggestFromHistory, multiline
  # input, slash-command completion, and patch_stdout streaming.
  # cli.py imports it lazily and falls back to input() if missing.
  "prompt_toolkit>=3.0.50,<4",
  # Phase 2.7 wave 1 — web dashboard backend.  FastAPI app +
  # uvicorn server.  hermes_cli/web_server.py imports lazily and
  # raises a SystemExit with an install hint if missing.
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.32,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.2,<10",
  "pytest-asyncio>=1.3.0,<2",
  "ruff",
  # Pre-commit framework — runs ruff (and any future hooks) before each
  # `git commit`.  Activate with `pre-commit install` after install.
  "pre-commit>=4.0,<5",
]

# Entry points — registered when phalanx is `pip install -e .`
# Two parallel names, one entry point:
#   * `hermes` / `hermes-agent` keep identical to upstream so docs / scripts /
#     cherry-picks from hermes-agent still work without rename.
#   * `phalanx` is the project-native command; preferred in new docs and the
#     end-user surface.  Same module, no behaviour difference — just a name
#     that matches `~/.phalanx/`, `PHALANX_HOME`, and the project itself.
[project.scripts]
phalanx = "hermes_cli.main:main"
hermes = "hermes_cli.main:main"
hermes-agent = "run_agent:main"

[tool.setuptools]
# Top-level Python modules (single-file, not packages). All names match
# hermes-agent upstream so future cherry-picks land cleanly.
# `run_agent` is the entry point for the `hermes-agent` console_script
# *and* a runtime dependency of `hermes_cli/main.py:cmd_oneshot` — leaving
# it off the list left `hermes oneshot` broken outside the project tree.
py-modules = [
  "hermes_constants",
  "hermes_logging",
  "hermes_state",
  "hermes_time",
  "run_agent",
  "utils",
]

[tool.setuptools.packages.find]
include = ["agent", "agent.*", "tools", "tools.*", "hermes_cli", "hermes_cli.*"]

# Phase 2.7 wave 6 — ship the built React SPA inside the wheel so
# `pip install phalanx && hermes web` Just Works without an npm step.
# Build order: `cd web && npm run build` populates hermes_cli/web_dist/
# (gitignored), then `python -m build` picks it up via package-data.
[tool.setuptools.package-data]
hermes_cli = ["web_dist/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
# Conservative selection during early phases — only catch real bugs.
# F   = pyflakes (undef vars, unused imports)
# E9  = SyntaxError / IndentationError
# Expand later (e.g. add I for import sorting, B for bugbear) once the
# ported hermes code has settled.
select = ["F", "E9"]
exclude = ["build", "dist", ".venv", "__pycache__"]
